// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`api-schemes return errors if schemes is an empty array  1`] = `
Array [
  Object {
    "code": "api-schemes",
    "message": "should NOT have fewer than 1 items",
    "path": Array [
      "schemes",
    ],
    "range": Object {
      "end": Object {
        "character": 15,
        "line": 3,
      },
      "start": Object {
        "character": 12,
        "line": 3,
      },
    },
    "severity": 1,
    "source": undefined,
    "summary": "OpenAPI host \`schemes\` must be present and non-empty array.",
  },
]
`;

exports[`api-schemes return errors if schemes is missing  1`] = `
Array [
  Object {
    "code": "api-schemes",
    "message": "schemes does not exist",
    "path": Array [
      "schemes",
    ],
    "range": Object {
      "end": Object {
        "character": 13,
        "line": 2,
      },
      "start": Object {
        "character": 0,
        "line": 0,
      },
    },
    "severity": 1,
    "source": undefined,
    "summary": "OpenAPI host \`schemes\` must be present and non-empty array.",
  },
]
`;
